--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
     <!-- Encabezado -->
-    <nav class="navbar navbar-expand-lg fixed-top rounded mt-2 mx-2 px-1">
+    <nav class="navbar navbar-expand-lg fixed-top rounded mt-3 mx-3 px-1">
         <div class="container-fluid">
             <a class="navbar-brand text-white">
                 <img src="img/logo.png" alt="Area51_BarberShop"> Área 51_Barber Shop
@@ -75,7 +75,8 @@
 
     <!-- Botón Scroll hacia abajo y devuelve al inicio -->
     <button id="scrollToTopBtn" class="btn"
-        style="position:fixed; bottom:40px; right:30px; z-index:9999; width: 50px; height:40px; display:none; align-items:center; justify-content:center;">
+        style="position:fixed; bottom:40px; right:30px; z-index:9999; width: 50px; height:40px;
+        display:none; align-items:center; justify-content:center;">
         <i class="fa-solid fa-chevron-up fa-lg"></i>
     </button>
 
