--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 <body>
 
     <!-- Encabezado -->
-    <nav class="navbar navbar-expand-lg fixed-top rounded mt-3 mx-3 px-1">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="margin: 15px;border-radius: 25px;
+        border-inline: 2px solid #00ff00;">
         <div class="container-fluid">
-            <a class="navbar-brand text-white">
-                <img src="img/logo.png" alt="Area51_BarberShop"> Área 51_Barber Shop
+            <a class="navbar-brand">
+                <img src="img/logo.png" alt="Logo REDOLLS S.A." class="img-fluid text-white" style="height: 50px;">
+                <strong class="text-white">Area 51_Barbershop</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -775,7 +777,7 @@
 
                 <hr style="border-top: 1px solid #00ff00;">
                 <div class="text-center mt-3">
-                    <p class="navbar-brand mb-0" style="justify-content: center;font-size: 12px;">&copy; 2025 Área
+                    <p class="navbar-brand mb-0" style="justify-content: center;font-size: 0.55rem;">&copy; 2025 Área
                         51_Barber Shop. Todos
                         los
                         Derechos Reservados.</p>
