--- a/index.html
+++ b/index.html
@@ -473,26 +473,26 @@
 
                 <!-- TikTok Videos -->
                 <div class="col-md-6 col-lg-4 d-flex justify-content-center">
-                    <blockquote class="tiktok-embed"
+                    <blockquote class="tiktok-embed iframe"
                         cite="https://www.tiktok.com/@ysarmiento.barber/video/7492250638236110086"
-                        data-video-id="7492250638236110086" style="width: 100%; max-width: 330px; border-radius: 10px;">
-                        <section></section>
+                        data-video-id="7492250638236110086"> 
+                        <section></section>                      
                     </blockquote>
                 </div>
 
                 <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                     <blockquote class="tiktok-embed"
                         cite="https://www.tiktok.com/@ysarmiento.barber/video/7493208342282767621"
-                        data-video-id="7493208342282767621" style="width: 100%; max-width: 330px; border-radius: 10px;">
-                        <section></section>
+                        data-video-id="7493208342282767621">
+                        <section></section>                        
                     </blockquote>
                 </div>
 
                 <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                     <blockquote class="tiktok-embed"
                         cite="https://www.tiktok.com/@ysarmiento.barber/video/7494847153395813637"
-                        data-video-id="7494847153395813637" style="width: 100%; max-width: 330px; border-radius: 10px;">
-                        <section></section>
+                        data-video-id="7494847153395813637"> 
+                        <section></section>                       
                     </blockquote>
                 </div>
 
