--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
     </header>
 
     <!-- Botón Scroll hacia abajo y devuelve al inicio -->
-    <button id="scrollToTopBtn" class="btn"
-        style="position:fixed; bottom:40px; right:30px; z-index:9999; width: 50px; height:40px;
+    <button id="scrollToTopBtn" class="btn" style="position:fixed; bottom:40px; right:30px; z-index:9999; width: 50px; height:40px;
         display:none; align-items:center; justify-content:center;">
         <i class="fa-solid fa-chevron-up fa-lg"></i>
     </button>
@@ -475,32 +474,32 @@
                 <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                     <blockquote class="tiktok-embed iframe"
                         cite="https://www.tiktok.com/@ysarmiento.barber/video/7492250638236110086"
-                        data-video-id="7492250638236110086"> 
-                        <section></section>                      
+                        data-video-id="7492250638236110086">
+                        <section></section>
                     </blockquote>
                 </div>
 
-                <div class="col-md-6 col-lg-4 d-flex justify-content-center">
+                <div class="col-md-6 col-lg-4">
                     <blockquote class="tiktok-embed"
                         cite="https://www.tiktok.com/@ysarmiento.barber/video/7493208342282767621"
                         data-video-id="7493208342282767621">
-                        <section></section>                        
+                        <section></section>
                     </blockquote>
                 </div>
 
                 <div class="col-md-6 col-lg-4 d-flex justify-content-center">
                     <blockquote class="tiktok-embed"
                         cite="https://www.tiktok.com/@ysarmiento.barber/video/7494847153395813637"
-                        data-video-id="7494847153395813637"> 
-                        <section></section>                       
+                        data-video-id="7494847153395813637">
+                        <section></section>
                     </blockquote>
                 </div>
 
             </div>
         </div>
-
-        <!-- Scripts de TikTok -->
-        <script async src="https://www.tiktok.com/embed.js"></script>
+    </section>
+    <!-- Scripts de TikTok -->
+    <script async src="https://www.tiktok.com/embed.js"></script>
     </section>
 
     <!-- Noticias -->
